# wayfarer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-27-beli-taste-profile-engine.md
docs/superpowers/specs/: 2026-06-26-beli-taste-profile-engine-design.md  2026-06-27-harness-vision.md
scripts/: preflight.sh  record_fixtures.py
src/wayfarer/: __init__.py  beli_ingest.py  cli.py  config.py  dealhunt.py  models.py  orchestrator.py  output.py  text.py
src/wayfarer/agents/: beli_extractor.py  llm_agents.py  runtime.py
src/wayfarer/agents/prompts/: beli_extract.md  brainstormer.md  brief_parser.md  critic.md  itinerary_writer.md
src/wayfarer/engine/: budget.py  coarse_prune.py  cost_assembly.py  deals.py  frames.py  rank.py  taste.py
src/wayfarer/providers/: base.py  cache.py  flights_fli.py  flights_serpapi.py  hotels_flat.py  hotels_serpapi.py  hotels_trvl.py  priors.py  serpapi_client.py
tests/: conftest.py  test_beli_extractor.py  test_beli_ingest.py  test_beli_models.py  test_budget.py  test_deals.py  test_flights_fli.py  test_frames.py  test_hotels_serpapi.py  test_hotels_trvl.py  test_links.py  test_live.py  test_output.py  test_pipeline_e2e.py  test_runtime_env_scrub.py  test_taste.py  test_taste_merge.py  test_text.py
tests/fixtures/: fli_dates.json  fli_exact.json  serpapi_hotels.json  trvl_hotels.json
