[project]
name = "wayfarer"
version = "0.1.0"
description = "Agentic, budget-bounded trip planner. Plan-only, no booking. Agents run on Claude Code headless (subscription)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "flights>=0.8",          # the `fli` package (Google Flights), default flight source
    "httpx>=0.27",           # for the SerpApi adapters
    "python-dotenv>=1.0",    # load SERPAPI_API_KEY from a local .env
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
wayfarer = "wayfarer.cli:main"
wayfarer-deals = "wayfarer.dealhunt:main"
wayfarer-beli = "wayfarer.beli_ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wayfarer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-m 'not live'"
markers = [
    "live: end-to-end against live services (fli, SerpApi, claude). Needs creds+network; run with `-m live`.",
]
